--- a/index.html
+++ b/index.html
@@ -442,6 +442,13 @@
                   <br>We use cookies and other data collection technologies to provide the best experience for our customers.
                 </small>
               </div>
+              <div class="footer-links">
+                <div style="height:24px;"></div>
+                <div class="footer-links-elm">
+                  <a href="" >Legal & Privacy</a>
+                  <a href=""> Site Map</a>
+                </div>
+              </div>
           </div>
         </div>
       </footer>
