--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <button class="header-elements-btn1">Learn
                     <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-1rizbyc"><path d="M11.902 12h8.196a.5.5 0 01.424.765l-4.098 6.557a.5.5 0 01-.848 0l-4.098-6.557a.5.5 0 01.424-.765z" fill="currentColor"></path></svg>
                 </button>
+                <div class="learn-dropdown"></div>
                 <div class="header-elements-btn2"> Catalog</div>
                 <div class="header-elements-btn2"> Individuals</div>
                 <button class="header-elements-btn1">Business
@@ -130,49 +131,54 @@
               <ul>
                 <li>
                   <div class="learning-cotent">
-                    <p class="learning-cotent-elm1">Step 2</p>
-                    <div class="learning-cotent-elm2">
-                      <article>
-                        <div class="learning-cotent-elm2-sub">
-                          <div class="learning-cotent-elm2-sub-img">
-                            <img src="img/container.webp" alt="">
-
-                          </div>
-                          <div class="learning-cotent-elm2-sub-content">
-                            <a href="">Data Structures and Algorithms</a>
-                            <div class="learning-cotent-elm2-sub-content-elm">
-                              <div class="learning-cotent-elm2-sub-content-elm1">
-                                <div>
-                                  <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-1ola0fc"><path d="M16 23.242l-5.629 2.852a1 1 0 01-1.436-1.067L10 19.04l-4.478-4.207a1 1 0 01.546-1.72l6.224-.871 2.818-5.504a1 1 0 011.78 0l2.818 5.504 6.224.872a1 1 0 01.546 1.719L22 19.04l1.065 5.987a1 1 0 01-1.436 1.067L16 23.242z" fill="currentColor"></path></svg>
-                                  <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-1ola0fc"><path d="M16 23.242l-5.629 2.852a1 1 0 01-1.436-1.067L10 19.04l-4.478-4.207a1 1 0 01.546-1.72l6.224-.871 2.818-5.504a1 1 0 011.78 0l2.818 5.504 6.224.872a1 1 0 01.546 1.719L22 19.04l1.065 5.987a1 1 0 01-1.436 1.067L16 23.242z" fill="currentColor"></path></svg>
-                                  <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-1ola0fc"><path d="M16 23.242l-5.629 2.852a1 1 0 01-1.436-1.067L10 19.04l-4.478-4.207a1 1 0 01.546-1.72l6.224-.871 2.818-5.504a1 1 0 011.78 0l2.818 5.504 6.224.872a1 1 0 01.546 1.719L22 19.04l1.065 5.987a1 1 0 01-1.436 1.067L16 23.242z" fill="currentColor"></path></svg>
-                                  <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-1ola0fc"><path d="M16 23.242l-5.629 2.852a1 1 0 01-1.436-1.067L10 19.04l-4.478-4.207a1 1 0 01.546-1.72l6.224-.871 2.818-5.504a1 1 0 011.78 0l2.818 5.504 6.224.872a1 1 0 01.546 1.719L22 19.04l1.065 5.987a1 1 0 01-1.436 1.067L16 23.242z" fill="currentColor"></path></svg>
-                                  <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-1ola0fc"><path d="M16 21l4.745 2.404-.904-5.08 3.746-3.52-5.185-.726L16 9.388V21zm-5.629 5.094a1 1 0 01-1.436-1.067L10 19.04l-4.478-4.207a1 1 0 01.546-1.72l6.224-.871 2.818-5.504a1 1 0 011.78 0l2.818 5.504 6.224.872a1 1 0 01.546 1.719L22 19.04l1.065 5.987a1 1 0 01-1.436 1.067L16 23.242l-5.629 2.852z" fill="currentColor"></path></svg>
+                    <div>
+                      <div class="learning-cotent-elm2">
+                        <article>
+                          <div class="learning-cotent-elm2-sub">
+                            <div class="learning-cotent-elm2-sub-img">
+                              <img src="img/firstblock.webp" alt="">
+                            </div>
+                            <div class="learning-cotent-elm2-sub-content">
+                              <a href="">Data Structures and Algorithms</a>
+                              <div class="learning-cotent-elm2-sub-content-elm">
+                                <div class="learning-cotent-elm2-sub-content-elm1">
+                                  <div>
+                                    <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-1ola0fc"><path d="M16 23.242l-5.629 2.852a1 1 0 01-1.436-1.067L10 19.04l-4.478-4.207a1 1 0 01.546-1.72l6.224-.871 2.818-5.504a1 1 0 011.78 0l2.818 5.504 6.224.872a1 1 0 01.546 1.719L22 19.04l1.065 5.987a1 1 0 01-1.436 1.067L16 23.242z" fill="currentColor"></path></svg>
+                                    <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-1ola0fc"><path d="M16 23.242l-5.629 2.852a1 1 0 01-1.436-1.067L10 19.04l-4.478-4.207a1 1 0 01.546-1.72l6.224-.871 2.818-5.504a1 1 0 011.78 0l2.818 5.504 6.224.872a1 1 0 01.546 1.719L22 19.04l1.065 5.987a1 1 0 01-1.436 1.067L16 23.242z" fill="currentColor"></path></svg>
+                                    <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-1ola0fc"><path d="M16 23.242l-5.629 2.852a1 1 0 01-1.436-1.067L10 19.04l-4.478-4.207a1 1 0 01.546-1.72l6.224-.871 2.818-5.504a1 1 0 011.78 0l2.818 5.504 6.224.872a1 1 0 01.546 1.719L22 19.04l1.065 5.987a1 1 0 01-1.436 1.067L16 23.242z" fill="currentColor"></path></svg>
+                                    <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-1ola0fc"><path d="M16 23.242l-5.629 2.852a1 1 0 01-1.436-1.067L10 19.04l-4.478-4.207a1 1 0 01.546-1.72l6.224-.871 2.818-5.504a1 1 0 011.78 0l2.818 5.504 6.224.872a1 1 0 01.546 1.719L22 19.04l1.065 5.987a1 1 0 01-1.436 1.067L16 23.242z" fill="currentColor"></path></svg>
+                                    <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-1ola0fc"><path d="M16 21l4.745 2.404-.904-5.08 3.746-3.52-5.185-.726L16 9.388V21zm-5.629 5.094a1 1 0 01-1.436-1.067L10 19.04l-4.478-4.207a1 1 0 01.546-1.72l6.224-.871 2.818-5.504a1 1 0 011.78 0l2.818 5.504 6.224.872a1 1 0 01.546 1.719L22 19.04l1.065 5.987a1 1 0 01-1.436 1.067L16 23.242l-5.629 2.852z" fill="currentColor"></path></svg>
+                                  </div>
+                                  <p>(1339)</p>
                                 </div>
-                                <p>(1339)</p>
-                              </div>
-                              <div class="learning-cotent-elm2-sub-content-elm2">
-                                <div class='learning-hours'>
-                                  <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-onkibi"><path d="M16 6c5.523 0 10 4.477 10 10s-4.477 10-10 10S6 21.523 6 16 10.477 6 16 6zm0 2a8 8 0 100 16 8 8 0 000-16zm0 2a1 1 0 011 1v4.585l2.707 2.708a1 1 0 01.083 1.32l-.083.094a1 1 0 01-1.414 0l-3-3-.073-.082A1.003 1.003 0 0115 16l.004.09a1.006 1.006 0 01-.004-.07V11a1 1 0 011-1z" fill="currentColor"></path></svg>
-                                  <p>109 hours</p>
-                                </div>
-                                <div class="learning-hours">
-                                  <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-onkibi"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.8571 26.2857C10.8571 27.2325 10.0896 28 9.14286 28H5.71429C4.76751 28 4 27.2325 4 26.2857V22C4 21.0532 4.76751 20.2857 5.71429 20.2857H9.14286C10.0896 20.2857 10.8571 21.0532 10.8571 22V26.2857ZM19.4286 26.2857V14.2857C19.4286 13.3389 18.6611 12.5714 17.7143 12.5714H14.2857C13.3389 12.5714 12.5714 13.3389 12.5714 14.2857V26.2857C12.5714 27.2325 13.3389 28 14.2857 28H17.7143C18.6611 28 19.4286 27.2325 19.4286 26.2857ZM21.1429 26.2857C21.1429 27.2325 21.9104 28 22.8571 28H26.2857C27.2325 28 28 27.2325 28 26.2857V5.71429C28 4.76751 27.2325 4 26.2857 4H22.8571C21.9104 4 21.1429 4.76751 21.1429 5.71429V26.2857ZM17.7143 14.2857H14.2857V26.2857H17.7143V14.2857ZM26.2857 5.71429H22.8571V26.2857H26.2857V5.71429Z" fill="currentColor" xmlns="http://www.w3.org/2000/svg"></path></svg>
-                                  <p>Beginner</p>
+                                <div class="learning-cotent-elm2-sub-content-elm2">
+                                  <div class='learning-hours'>
+                                    <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-onkibi"><path d="M16 6c5.523 0 10 4.477 10 10s-4.477 10-10 10S6 21.523 6 16 10.477 6 16 6zm0 2a8 8 0 100 16 8 8 0 000-16zm0 2a1 1 0 011 1v4.585l2.707 2.708a1 1 0 01.083 1.32l-.083.094a1 1 0 01-1.414 0l-3-3-.073-.082A1.003 1.003 0 0115 16l.004.09a1.006 1.006 0 01-.004-.07V11a1 1 0 011-1z" fill="currentColor"></path></svg>
+                                    <p>109 hours</p>
+                                  </div>
+                                  <div class="learning-hours">
+                                    <svg viewBox="0 0 32 32" focusable="false" class="chakra-icon css-onkibi"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.8571 26.2857C10.8571 27.2325 10.0896 28 9.14286 28H5.71429C4.76751 28 4 27.2325 4 26.2857V22C4 21.0532 4.76751 20.2857 5.71429 20.2857H9.14286C10.0896 20.2857 10.8571 21.0532 10.8571 22V26.2857ZM19.4286 26.2857V14.2857C19.4286 13.3389 18.6611 12.5714 17.7143 12.5714H14.2857C13.3389 12.5714 12.5714 13.3389 12.5714 14.2857V26.2857C12.5714 27.2325 13.3389 28 14.2857 28H17.7143C18.6611 28 19.4286 27.2325 19.4286 26.2857ZM21.1429 26.2857C21.1429 27.2325 21.9104 28 22.8571 28H26.2857C27.2325 28 28 27.2325 28 26.2857V5.71429C28 4.76751 27.2325 4 26.2857 4H22.8571C21.9104 4 21.1429 4.76751 21.1429 5.71429V26.2857ZM17.7143 14.2857H14.2857V26.2857H17.7143V14.2857ZM26.2857 5.71429H22.8571V26.2857H26.2857V5.71429Z" fill="currentColor" xmlns="http://www.w3.org/2000/svg"></path></svg>
+                                    <p>Beginner</p>
+                                  </div>
                                 </div>
                               </div>
                             </div>
                           </div>
-                        </div>
-                      </article>
+                        </article>
+                      </div>
                     </div>
-                    <div style="height: 24px;"></div>
-                    <p class="learning-head">Skills Covered</p>
-                    <p class="learning-para">Control flow in Python, Command line interface basics, Python functions, Object-oriented Python, CSS, HTML, Python data structures, Text processing in Python, Code debugging, Python operators, Python classes, API requests, Variable scope, Python syntax, User input handling, Front-end development basics, Python methods, JSON, Python exception handling, Python lists, Computer memory architecture, Python standard library, Coding best practices, Python data types, Linting, Python scripting, Pep8, Code refactoring, Bash, Shell scripting, Built-in Python functions, Python turtle, Python function definition, Commenting code, Python variables, Devtools, Flexbox, Basic Python</p>
-                    <div style="height: 12px;"></div>
-                    <a class="view-program-btn">Learn More
-                      <svg data-sanity-icon="arrow-right" width="20px" height="20px" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13 7L18.5 12.5L13 18M18.5 12.5H6" stroke="currentColor" stroke-width="1.2"></path></svg>
-                    </a>
+                    <div>
+                      <div class="learning-cotent-elm1">
+                        <p>Step 2</p>
+                      </div>
+                      <!-- <div style="height: 24px;"></div> -->
+                      <p class="learning-head">Skills Covered</p>
+                      <p class="learning-para">Control flow in Python, Command line interface basics, Python functions, Object-oriented Python, CSS, HTML, Python data structures, Text processing in Python, Code debugging, Python operators, Python classes, API requests, Variable scope, Python syntax, User input handling, Front-end development basics, Python methods, JSON, Python exception handling, Python lists, Computer memory architecture, Python standard library, Coding best practices, Python data types, Linting, Python scripting, Pep8, Code refactoring, Bash, Shell scripting, Built-in Python functions, Python turtle, Python function definition, Commenting code, Python variables, Devtools, Flexbox, Basic Python</p>
+                      <div style="height: 12px;"></div>
+                      <a class="view-program-btn">Learn More
+                        <svg data-sanity-icon="arrow-right" width="20px" height="20px" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13 7L18.5 12.5L13 18M18.5 12.5H6" stroke="currentColor" stroke-width="1.2"></path></svg>
+                      </a>
+                    </div>
                   </div>
                 </li>
               </ul>
